{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 10,
  "lineage": "6b8b2f90-165d-5e66-5a38-676fda351f1e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "backstage_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:005925557164:internet-gateway/igw-0a9cfef8b35258549",
            "id": "igw-0a9cfef8b35258549",
            "owner_id": "005925557164",
            "tags": {
              "Name": "BackstageIGW"
            },
            "tags_all": {
              "Name": "BackstageIGW"
            },
            "vpc_id": "vpc-0eb2a166a6eb504bb"
          },
          "dependencies": [
            "aws_vpc.backstage_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "backstage_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:005925557164:route-table/rtb-0ca08d2149a42edbb",
            "id": "rtb-0ca08d2149a42edbb",
            "owner_id": "005925557164",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a9cfef8b35258549",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "BackstageRouteTable"
            },
            "tags_all": {
              "Name": "BackstageRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb2a166a6eb504bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.backstage_igw",
            "aws_vpc.backstage_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "backstage_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089645fcc4ef3a9d4",
            "route_table_id": "rtb-0ca08d2149a42edbb",
            "subnet_id": "subnet-005e270e0ede0969a"
          },
          "dependencies": [
            "aws_internet_gateway.backstage_igw",
            "aws_route_table.backstage_rt",
            "aws_subnet.backstage",
            "aws_vpc.backstage_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backstage_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:005925557164:security-group/sg-053a91a7fb187682e",
            "description": "Security group for Backstage instance",
            "egress": [],
            "id": "sg-053a91a7fb187682e",
            "ingress": [],
            "name": "backstage_sg",
            "name_prefix": "",
            "owner_id": "005925557164",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0eb2a166a6eb504bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.backstage_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3000,
            "id": "sgrule-462226881",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-053a91a7fb187682e",
            "security_group_rule_id": "sgr-0a2f44b6d0d61c536",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.backstage_sg",
            "aws_vpc.backstage_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backstage",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:005925557164:subnet/subnet-005e270e0ede0969a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005e270e0ede0969a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "005925557164",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "BackstageSubnet"
            },
            "tags_all": {
              "Name": "BackstageSubnet"
            },
            "vpc_id": "vpc-0eb2a166a6eb504bb"
          },
          "dependencies": [
            "aws_vpc.backstage_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "backstage_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:005925557164:vpc/vpc-0eb2a166a6eb504bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cc1b5926ad628f10",
            "default_route_table_id": "rtb-07e51daa8dd9fc4c8",
            "default_security_group_id": "sg-0a6e58fd6400de827",
            "dhcp_options_id": "dopt-0bdfec701ecd08a4e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eb2a166a6eb504bb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07e51daa8dd9fc4c8",
            "owner_id": "005925557164",
            "tags": {
              "Name": "BackstageVPC"
            },
            "tags_all": {
              "Name": "BackstageVPC"
            }
          }
        }
      ]
    }
  ]
}